<resources>
    <string name="app_name">Calculations</string>
    <string name="toolbar_title">Calculator</string>
    <string name="hint_num1">First Number</string>
    <string name="hint_num2">Second Number</string>
    <string name="operation_plus">Plus</string>
    <string name="operation_minus">Minus</string>
    <string name="operation_multiply">Multiply</string>
    <string name="operation_divide">Divide</string>
    <string name="btn_equal">Equal</string>
    <string name="result_text">Result: </string>
    <string name="error_invalid_input">Invalid input. Please enter valid numbers.</string>
    <string name="error_divide_by_zero">Cannot divide by zero.</string>
</resources>