<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:title="@string/toolbar_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- LinearLayout 1 -->
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="8dp" />

    <!-- LinearLayout 2 -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- EditText 1 -->
        <EditText
            android:id="@+id/txtNum1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_num1"
            android:inputType="number" />

        <!-- RadioGroup -->
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rdPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_plus" />

            <RadioButton
                android:id="@+id/rdMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_minus" />

            <RadioButton
                android:id="@+id/rdMulti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_multiply" />

            <RadioButton
                android:id="@+id/rdDivide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/operation_divide" />
        </RadioGroup>

        <!-- EditText 2 -->
        <EditText
            android:id="@+id/txtNum2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hint_num2"
            android:inputType="number" />
    </LinearLayout>

    <!-- Button Equal -->
    <Button
        android:id="@+id/btnEqual"
        android:layout_width="415dp"
        android:layout_height="79dp"
        android:padding="16dp"
        android:text="@string/btn_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    <!-- TextView Result -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/result_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnEqual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
